 * `dgm::DynamicBuffer` is now movable
 * `dgm::SpatialBuffer` is now movable
 * `dgm::SpatialBuffe::getOverlapCandidates` is now `const`

dgm-lib v2.1.2
 * Added `getUnitVector` math function
 * Fixed `getClosestPointOnLine` returning bad values for most lines

dgm-lib v2.1.1
 * `dgm::Animation` is initialized with a random state when constructed with animation states
	* This way the program doesn't immediately throw an exception when programmer forgets to set some state
 * `UniversalReference` trait can handle implicit conversions
 * Adding bunch of math functions
	* `getClosestPointOnLine` - useful for finding out distance of a point from a line
	* `getIntersection(line, line)` - for finding intersection of two lines
	* `getIntersection(line, circle)` - for finding intersections between a line and a circle
	* `hasIntersection(line, circle)` - faster check whether line intersects a circle
 * `dgm::ResourceManager` now supports unloading resources via `unloadResource` method

dgm-lib v2.1.0
 * `dgm::Buffer` has been revamped even further
	* Renamed to `dgm::StaticBuffer`
	* Capacity is now specified in constructor and it cannot be resized
	* Methods were renamed to make sense and not to blindly follow `std`
		* `grow` instead of `expand`
		* `growUnchecked` that grows the container and always result of `getLast`
			* If the buffer is full, it always returns last element
		* `getSize`, `getCapacity`, `getLast`, `isEmpty`, `isFull` instead of `size`, `capacity`, `last`, `empty` and `full`
	* Added trait called `StaticBufferType`
 * Added class `dgm::DynamicBuffer`
	* Has constant time insertion and deletion and stable iterators
	* Doesn't have upper cap on the item count
	* Used by `dgm::SpatialBuffer`, for custom use case prefer using `plf::colony`
 * Added class `dgm::SpatialBuffer`
	* Can perform fast lookups for items based on their position (something like QuadTree, but simpler)
	* Has somewhat constant time insertion and deletion